- added Twitter support (Thorsten, Thomas Zeithaml)
- added Facebook Like Button support (Thorsten)
- added "Bookmark on Delicious" support (Thorsten)
- added Ajax-powered comment functionality (Thorsten)
- added attachment administration frontend (Anatoliy)
- added basic authentication support for LDAP groups (Thorsten)
- added basic support for HTML5 microdata (Thorsten)
- enabling Gzip compression by default (Thorsten)
- updated bundled jQuery to version 1.4.4 (Thorsten)

Version 2.6.15 - 2011-02
- fixed minor bugs (Thorsten)

Version 2.6.14 - 2011-01-24
- added rewrite rules for nginx (Florian Anderiasch)
- added compatibility for MySQL 5.5 with ext/mysql (Thorsten)
- added support to ban IPs from user tracking files (Thorsten)
- improved restore functionality (Thorsten)
- updated Dutch translation (Hans)
- updated German translation (Thorsten)
- Fixed issue with sending mails to category administrators (Gustavo Solt)
- fixed minor bugs (Thorsten)

Version 2.6.13 - 2010-12-15
- clean package after compromised server (Thorsten)

Version 2.6.12 - 2010-12-13
- added experimental support for MariaDB (Thorsten)
- added empty LDAP configuration file as example (Thorsten)
- updated Arabic translation
- updated Dutch translation (Werner Helmich)
- updated French translation
- updated Norwegian Bokmål translation (harald@delelisten.no)
- fixed minor bugs (Thorsten, Gustavo Solt)

Version 2.6.11 - 2010-11-03
- fixed some bugs introduced with phpMyFAQ 2.6.10 (Thorsten)

Version 2.6.10 - 2010-11-02
- added several security enhancements (Thorsten)
- updated Chinese (Simplified) translation
- updated German translation (Thorsten)
- updated Portuguese translation (Fernando G. Monteiro)
- fixed minor bugs (Thorsten)

Version 2.6.9 - 2010-09-28
- fixed XSS vulnerability (Yam Mesicka, Thorsten)
- added Slovak translation (Tibor)
- added minor usability improvement in administration backend (Thorsten)
- fixed issue with embedded Google Analytics code (Thorsten)
