@@ -19,6 +19,7 @@ Version 2.7.0-alpha2 - 2011-
 - added attachment administration frontend (Anatoliy)
 - added basic authentication support for LDAP groups (Thorsten)
 - added basic support for HTML5 microdata (Thorsten)
+- added functionality of the TinyMCE save button (Gustavo Solt)
 - enabling Gzip compression by default (Thorsten)
 - updated bundled jQuery to version 1.4.4 (Thorsten)
 
